# SCC0250-Assignments

./: .gitignore  .gitmodules  Assignment  Assignment.cbp  CMakeLists.txt
include/: camera.hpp  collision.hpp  common.hpp  cubemap.hpp  defer.hpp  file.hpp  framebuffer.hpp  input.hpp  light.hpp  mesh.hpp  quad.hpp  shader.hpp  texture.hpp  transform.hpp  vertex.hpp
shader/: flat.frag  flat.vert  gouraud.frag  gouraud.vert  mesh.frag  mesh.vert  normals.geom  phong.frag  post.frag  post.vert  postprocess.frag  postprocess.vert  quad.frag  quad.vert  sky.frag  sky.vert
src/: main.cpp
third/gl/: extensions.txt
third/gl/include/: gl_33.hpp
third/gl/src/: gl_33.cpp
